--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "senior enrichment project ",
   "main": "index.js",
   "dependencies": {
+    "chalk": "^2.4.2",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
