--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "senior enrichment project ",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.19.0",
     "chalk": "^2.4.2",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
@@ -13,7 +14,9 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "redux": "^4.0.1",
+    "redux": "^4.0.3",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "sequelize": "^5.9.0",
     "volleyball": "^1.5.1"
   },
